修改：删除主机号

--- a/seata-distributed-transaction/src/main/resources/application.properties
+++ b/seata-distributed-transaction/src/main/resources/application.properties
@@ -6,19 +6,19 @@ spring.application.name=seata-distributed-transaction
 spring.datasource.dynamic.primary=orderdb
 
 # orderDB\u7684\u6570\u636E\u6E90\u94FE\u63A5
-spring.datasource.dynamic.datasource.orderdb.url=jdbc:mysql://39.101.163.179:3306/orderDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.dynamic.datasource.orderdb.url=jdbc:mysql://x:3306/orderDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.dynamic.datasource.orderdb.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.orderdb.username=root
 spring.datasource.dynamic.datasource.orderdb.password=123456
 
 #accountDB\u7684\u6570\u636E\u6E90\u914D\u7F6E
-spring.datasource.dynamic.datasource.accountdb.url=jdbc:mysql://39.101.163.179:3306/accountDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.dynamic.datasource.accountdb.url=jdbc:mysql://x:3306/accountDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.dynamic.datasource.accountdb.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.accountdb.username=root
 spring.datasource.dynamic.datasource.accountdb.password=123456
 
 #productDB\u7684\u6570\u636E\u6E90\u914D\u7F6E
-spring.datasource.dynamic.datasource.productdb.url=jdbc:mysql://39.101.163.179:3306/productDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.dynamic.datasource.productdb.url=jdbc:mysql://x:3306/productDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.dynamic.datasource.productdb.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.productdb.username=root
 spring.datasource.dynamic.datasource.productdb.password=123456
