--- a/seata-distributed-transaction/pom.xml
+++ b/seata-distributed-transaction/pom.xml
@@ -23,7 +23,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.xxj</groupId>
+            <groupId>com.xxj</groupId>
             <artifactId>seata-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
