--- a/seata-distributed-transaction/src/main/resources/application.properties
+++ b/seata-distributed-transaction/src/main/resources/application.properties
@@ -6,25 +6,38 @@ spring.application.name=seata-distributed-transaction
 spring.datasource.dynamic.primary=orderdb
 
 # orderDB\u7684\u6570\u636E\u6E90\u94FE\u63A5
-spring.datasource.dynamic.datasource.orderdb.url=jdbc:mysql://x:3306/orderDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.dynamic.datasource.orderdb.url=jdbc:mysql://39.101.163.179:3306/orderDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.dynamic.datasource.orderdb.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.orderdb.username=root
 spring.datasource.dynamic.datasource.orderdb.password=123456
 
 #accountDB\u7684\u6570\u636E\u6E90\u914D\u7F6E
-spring.datasource.dynamic.datasource.accountdb.url=jdbc:mysql://x:3306/accountDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.dynamic.datasource.accountdb.url=jdbc:mysql://39.101.163.179:3306/accountDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.dynamic.datasource.accountdb.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.accountdb.username=root
 spring.datasource.dynamic.datasource.accountdb.password=123456
 
 #productDB\u7684\u6570\u636E\u6E90\u914D\u7F6E
-spring.datasource.dynamic.datasource.productdb.url=jdbc:mysql://x:3306/productDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.dynamic.datasource.productdb.url=jdbc:mysql://39.101.163.179:3306/productDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.dynamic.datasource.productdb.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.productdb.username=root
 spring.datasource.dynamic.datasource.productdb.password=123456
 
 #\u5F00\u542F\u5BF9seata\u7684\u96C6\u6210
 spring.datasource.dynamic.seata=true
+## *******************\u5355\u673A\u73AF\u5883\u914D\u7F6E*************************
+##seata\u7684\u5E94\u7528\u7F16\u53F7
+#seata.application-id=${spring.application.name}
+##seata\u7684\u4E8B\u52A1\u7EC4\u7F16\u53F7\uFF0C\u7528\u4E8ETC\u96C6\u7FA4\u540D
+#seata.tx-service-group=${seata.application-id}-group
+##\u865A\u62DF\u7EC4\u548C\u5206\u7EC4\u7684\u6620\u5C04
+#seata.service.vgroup-mapping.seata-distributed-transaction-group=default
+
+##\u5206\u7EC4\u548Cseata\u670D\u52A1\u7684\u6620\u5C04
+#seata.service.grouplist.default=39.101.163.179:8091
+
+
+## *******************\u96C6\u7FA4\u73AF\u5883\u914D\u7F6E*************************
 
 #seata\u7684\u5E94\u7528\u7F16\u53F7
 seata.application-id=${spring.application.name}
@@ -32,13 +45,11 @@ seata.application-id=${spring.application.name}
 seata.tx-service-group=${seata.application-id}-group
 #\u865A\u62DF\u7EC4\u548C\u5206\u7EC4\u7684\u6620\u5C04
 seata.service.vgroup-mapping.seata-distributed-transaction-group=default
-#\u5206\u7EC4\u548Cseata\u670D\u52A1\u7684\u6620\u5C04
-seata.service.grouplist.default=39.101.163.179:8091
-
-
-
-
-
-
-
+# \u6CE8\u518C\u5230nacos\u4E0A\u9700\u8981\u7684\u914D\u7F6E
+seata.enabled=true
+seata.registry.type=nacos
+seata.registry.nacos.application=seata-server
+seata.registry.nacos.group=SEATA_GROUP
+seata.registry.nacos.cluster=default
+seata.registry.nacos.server-addr=39.101.163.179:80
 
