--- a/seata-distributed-order-service/src/main/resources/application.properties
+++ b/seata-distributed-order-service/src/main/resources/application.properties
@@ -7,18 +7,18 @@ server.port=8083
 spring.application.name=seata-distributed-order-service
 
 # orderDB\u7684\u6570\u636E\u6E90\u94FE\u63A5
-spring.datasource.url=jdbc:mysql://39.101.163.179:3306/orderDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://x:3306/orderDB?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 
 
-spring.cloud.nacos.server-addr=39.101.163.179:80
+spring.cloud.nacos.server-addr=x:80
 
 seata.application-id=${spring.application.name}
 seata.tx-service-group=${spring.application.name}-group
 seata.service.vgroup-mapping.seata-distributed-order-service-group=default
-#seata.service.grouplist.default=39.101.163.179:8091
+#seata.service.grouplist.default=x:8091
 #seata.registry.type=file
 
 
@@ -30,4 +30,4 @@ seata.registry.type=nacos
 seata.registry.nacos.application=seata-server
 seata.registry.nacos.group=SEATA_GROUP
 seata.registry.nacos.cluster=default
-seata.registry.nacos.server-addr=39.101.163.179:80
+seata.registry.nacos.server-addr=x:80
